# state-function

./: .gitignore  CMakeLists.txt  Dockerfile  demo-workflow.json  main.cpp  server.py
benchmarks/FINRA/: .gitignore  Makefile  flowcontrol.py  lastpx.py  marginBalance.py  marketdata.py  side.py  test.py  trddate.py  volume.py  workflow.json
benchmarks/FINRA/Faastlane/: Makefile  lastpx.py  marginBalance.py  marketdata.py  side.py  test.py  trddate.py  utils.py  volume.py  workflow.json
benchmarks/FINRA/Faastorage/: Makefile  test.py
benchmarks/FINRA/Faastorage/flowcontrol/: __main__.py
benchmarks/FINRA/Faastorage/lastpx/: __main__.py
benchmarks/FINRA/Faastorage/marginBalance/: __main__.py  param.json
benchmarks/FINRA/Faastorage/marketdata/: __main__.py
benchmarks/FINRA/Faastorage/side/: __main__.py
benchmarks/FINRA/Faastorage/trddate/: __main__.py
benchmarks/FINRA/Faastorage/volume/: __main__.py
benchmarks/FINRA/Openwhisk/: Makefile  test.py
benchmarks/FINRA/Openwhisk/flowcontrol/: __main__.py
benchmarks/FINRA/Openwhisk/lastpx/: __main__.py
benchmarks/FINRA/Openwhisk/marginBalance/: __main__.py
benchmarks/FINRA/Openwhisk/marketdata/: __main__.py
benchmarks/FINRA/Openwhisk/side/: __main__.py
benchmarks/FINRA/Openwhisk/trddate/: __main__.py
benchmarks/FINRA/Openwhisk/volume/: __main__.py
benchmarks/FINRA/Redis/: Makefile
benchmarks/FINRA/Redis/flowcontrol/: __main__.py
benchmarks/FINRA/Redis/lastpx/: __main__.py
benchmarks/FINRA/Redis/marginBalance/: __main__.py
benchmarks/FINRA/Redis/marketdata/: __main__.py
benchmarks/FINRA/Redis/side/: __main__.py
benchmarks/FINRA/Redis/trddate/: __main__.py
benchmarks/FINRA/Redis/volume/: __main__.py
benchmarks/Healthcare-Analytics/: .gitignore  Makefile  analytics.py  anonymize.py  identifyphi.py  param.json  test.py  workflow.json
benchmarks/Healthcare-Analytics/Faastlane/: .gitignore  Makefile  analytics.py  anonymize.py  identifyphi.py  test.py
benchmarks/Healthcare-Analytics/Faastorage/: Makefile
benchmarks/Healthcare-Analytics/Faastorage/analytics/: __main__.py
benchmarks/Healthcare-Analytics/Faastorage/anonymize/: __main__.py  param.json
benchmarks/Healthcare-Analytics/Faastorage/identifyphi/: __main__.py
benchmarks/Healthcare-Analytics/Openwhisk/: .gitignore  Makefile  test.py
benchmarks/Healthcare-Analytics/Openwhisk/analytics/: __main__.py  param.json
benchmarks/Healthcare-Analytics/Openwhisk/anonymize/: __main__.py
benchmarks/Healthcare-Analytics/Openwhisk/identifyphi/: __main__.py
benchmarks/Healthcare-Analytics/Redis/: Makefile  main.py
benchmarks/Healthcare-Analytics/Redis/analytics/: __main__.py
benchmarks/ML-Prediction/: .gitignore  Makefile  param.json  predict.py  render.py  resize.py  test.py  workflow.json
benchmarks/ML-Prediction/Faastlane/: Makefile  predict.py  render.py  requirements.txt  resize.py  test.py
benchmarks/ML-Prediction/Faastorage/: Makefile  main.py  predict.py  render.py  test.py
benchmarks/ML-Prediction/Openwhisk/: Makefile  test.py
benchmarks/ML-Prediction/Redis/: Makefile  main.py
benchmarks/ML-Training/: Dockerfile
benchmarks/Sentiment-Analysis/: .gitignore  Makefile  WritetoDB.py  publishsns.py  readcsv.py  sentiment.py  test.py  workflow.json
benchmarks/Sentiment-Analysis/Faastlane/: Makefile  publishsns.py  readcsv.py  sentiment.py  utils.py  workflow.json  writetoDB.py
benchmarks/Sentiment-Analysis/Faastorage/: Makefile
benchmarks/Sentiment-Analysis/Openwhisk/: Makefile  main.py
benchmarks/Sentiment-Analysis/Redis/: Makefile
benchmarks/Sentiment-Analysis/data/: few_reviews.csv
cmake/: ExternalProjects.cmake
include/df/msg/: msg.h
include/df/shm/: shm.h
include/df/smalloc/: smalloc.h
include/df/utils/: config.h  dl.h  env.h  errors.h  json.h  locks.h  log.h  macro.h  network.h  os.h  radom.h  shm.h  signal-tool.h  smalloc.h  string-tool.h  timer.h  timing.h  uuid.h
src/DataFunction/: .gitignore  CMakeLists.txt  Makefile
src/DataFunction/IPC-py-extend/: CMakeLists.txt  ShareMemory.h  setup.py
src/DataFunction/action/: __main__.py
src/DataFunctionSidecar/: CMakeLists.txt
src/DataFunctionSidecar/DataStruct/: CMakeLists.txt
src/DataFunctionSidecar/DataStruct/KV-Store/: CMakeLists.txt  DataFunctionKVStoreBucket.cpp
src/DataFunctionSidecar/datafunction-py-extend/: .gitignore  CMakeLists.txt  datafunction.cpp  kvBucket.h  setup.py
src/DataFunctionSidecar/datafunction-py-extend-2.7/: CMakeLists.txt  datafunction.cpp  kvBucket.h  setup.py
src/DataStruct/KV-Store/: CMakeLists.txt  DataFunctionKVStoreBucket.cpp
src/common/: CMakeLists.txt
src/common/msg/: CMakeLists.txt  msg.cpp
src/common/shm/: CMakeLists.txt  shm.cpp
src/common/smalloc/: CMakeLists.txt  smalloc.cpp
src/common/utils/: CMakeLists.txt  config.cpp  dl.cpp  env.cpp  errors.cpp  json.cpp  log.cpp  network.cpp  os.cpp  radom.cpp  shm.cpp  smalloc.cpp  string-tool.cpp  timer.cpp  timing.cpp  uuid.cpp
src/datafunction-py-extend/: CMakeLists.txt  datafunction.cpp  setup.py
src/datafunction-py-interface/: CMakeLists.txt  datafunction-py-interface.cpp  datafunction-py-interface.h
src/datafunction-py-interface/package/: .gitignore  setup.py
src/shm/: CMakeLists.txt  shm.cpp
src/state-function-action/: .gitignore  CMakeLists.txt  Makefile  __main__.py
src/state-function-action/ipc-py-extend/: .gitignore  CMakeLists.txt  MessageQueue.h  ShareMemory.h  ipc.cpp  setup.py
src/state-function-library/: CMakeLists.txt
src/state-function-library/statefunction-py-extend/: CMakeLists.txt  kvBucket.h  setup.py  statefunction.cpp
src/state-function-library/statefunction-py-extend-2.7/: .gitignore  CMakeLists.txt  kvBucket.h  setup.py  statefunction.cpp
test/: CMakeLists.txt  DataFunctionKVStoreBucketTest.cpp  StateFunctionKVStoreBucketTest.cpp  StaticAllocatableMemoryTest.cpp  cppTest.cpp  msg_test.cpp
test/msg-test/: receiver.py  sender.py
test/python-test/: kvstore-2.7.py  kvstore.py  return-time.py  shm-extend.py  size-test.py  state-lifecycle-manage.py
test/python-test/TCP-Punching/: client2.py  server.py
(+35 files in other folders)
